Add text wrap option to actions